# STL

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  DEVTOOLS.md  Makefile  README.md  SPRINT_02_DEPLOYMENT_STATUS.md  SPRINT_02_VERIFICATION_REPORT.md  dev.ps1  package.json  playwright.config.ts  pyproject.toml  pytest.ini  start-chrome-debug.bat
.claude/: settings.json
.github/workflows/: ci.yml
agent/: README.md  install.ps1  install_autostart.ps1  launch_hidden.vbs  requirements.txt  run_agent.cmd  start.cmd  update_manifest.txt
archive/lab-devtools/: LabBar.svelte  README.md
deploy/: README.md  deploy.sh  nginx.conf  publish_quik_agent.sh  shectory-trader.service
docs/: PROMPT_Senior_Dev_Shectory_Trader_FINAM.md  Source_update.ps1  TZ_Shectory_Trader_v2_FINAM.md  lab-integration-test.md  quik-trading-startup.md  sprint02-acceptance.md  sprint02-phase2-acceptance.md  sprint02.md
docs/Boris_Sprints/: Sprint_02
docs/config/: MVP-instrument.md
docs/runbooks/: finam-access-checklist.md
frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/mock/: requirements.txt  ws_server.py
frontend/src/: App.svelte  test-setup.ts
memory/: MEMORY.md  project_status.md  user_preferences.md
prisma/: SETUP_NOTES.md  package-lock.json  package.json  prisma.config.ts  schema.prisma
quik_agent/: .gitignore  CONTRACT.md  PHASE2.md  README.md  buf.gen.yaml  gen.bat  go.mod  go.sum
quik_agent/lua/: README.md  enable_trading.bat  enable_trading.ps1  set_whitelist.bat  set_whitelist.ps1  setup_filequeue.bat  setup_filequeue.ps1  shectory_trade.lua
scripts/: deploy_winners.py  diag_2ema.py  dl_ai46_bars.py  dl_ai46_ticks.py  enqueue_campaign.py  find_instrument.py  fix_grpc_imports.py  opt_agent.py  optimize_adaptive.py  optimize_campaign.py  optimize_loop.sh  regen_proto.sh  run_ai46_bt.py  run_ai46_bt_day.py  run_ai46_bt_par.py  run_ai46_sweep.py  shectory-optimizer.service  spike_last_quote.py  sweep_i9.py  validate_fvg_pnl.py  warm_robot_bars.py
tests/: conftest.py  test_avg_margin.py  test_config.py
tests/api/: test_app.py  test_ws_hub.py  test_ws_hub_sprint1.py
tests/auth/: test_auth_client.py  test_auth_integration.py  test_guard.py  test_models.py
tests/broker/: test_adapters.py  test_contract.py  test_demo_robot.py  test_registry.py
tests/lab/: test_ai46_backtest.py  test_ai46_contrarian.py  test_ai46_detector.py  test_ai46_engine.py  test_ai46_execution.py  test_ai46_features.py  test_ai46_llm.py  test_ai46_models.py  (+13 more)
trader/: config.py  db.py  util.py
(+261 files in other folders)
