[tool.poetry]
name = "shectory-trader"
version = "0.1.0"
description = "Execution platform for FORTS ММВБ via Finam Trade API"
authors = ["Shectory"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = {extras = ["http2"], version = "^0.27"}
pydantic-settings = "^2.3"
structlog = "^24.4"
websockets = "^13.1"
orjson = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-asyncio = "^0.23"
respx = "^0.21"
ruff = "^0.4"
pytest-mock = "^3.14"
hypothesis = "^6"
pytest-timeout = "^2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
