[tool.poetry]
name = "shectory-trader"
version = "0.1.0"
description = "Execution platform for FORTS ММВБ via Finam Trade API"
authors = ["Shectory"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = {extras = ["http2"], version = "^0.27"}
pydantic-settings = "^2.3"
structlog = "^24.4"
grpcio = ">=1.63,<2"
protobuf = ">=5.26,<6"
googleapis-common-protos = ">=1.63"
fastapi = "^0.111"
uvicorn = {extras = ["standard"], version = "^0.30"}
asyncpg = "^0.29"
croniter = "^3.0"
cuid2 = "^2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-asyncio = "^0.23"
respx = "^0.21"
ruff = "^0.4"
pytest-mock = "^3.14"
hypothesis = "^6"
pytest-timeout = "^2"
grpcio-tools = ">=1.63,<2"

[tool.ruff]
exclude = ["trader/proto/gen/**", "trader/proto/**"]

[tool.ruff.lint]
# E701 (compact `if cond: return x` in strategy signal fns) and E402 (deliberate
# lazy/conditional imports inside endpoints + the cuid() helper sitting between
# imports) are intentional here. Keep the real-bug F-series rules ON.
ignore = ["E701", "E402"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
